--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "html-to-text": "^7.0.0",
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^5.12.2",
+      "mongoose-fuzzy-searching": "^2.0.2",
       "nodemailer": "^6.5.0",
       "slugify": "^1.5.0",
       "validator": "^13.7.0",
