--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    },
    "dependencies": {
       "@sendgrid/mail": "^7.4.4",
+      "axios": "^0.26.0",
       "bcryptjs": "^2.4.3",
       "body-parser": "^1.19.0",
       "colors": "^1.4.0",
